<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/Headline"
        android:text="@string/portfolio_title" />

    <Button
        android:id="@+id/spotify_button"
        style="@style/AppButton"
        android:onClick="launchApp"
        android:text="@string/spotify_button" />

    <Button
        android:id="@+id/football_button"
        style="@style/AppButton"
        android:onClick="launchApp"
        android:text="@string/football_button" />

    <Button
        android:id="@+id/library_button"
        style="@style/AppButton"
        android:onClick="launchApp"
        android:text="@string/library_button" />

    <Button
        android:id="@+id/bigger_button"
        style="@style/AppButton"
        android:onClick="launchApp"
        android:text="@string/bigger_button" />

    <Button
        android:id="@+id/reader_button"
        style="@style/AppButton"
        android:onClick="launchApp"
        android:text="@string/reader_button" />

    <Button
        android:id="@+id/my_app_button"
        style="@style/AppButton"
        android:onClick="launchApp"
        android:text="@string/my_app_button" />

</LinearLayout>
